--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ twitter_username: prasoonj
 github_username:  scalafastlane
 
 # Build settings
-markdown: kramdown
+#markdown: kramdown
 #theme: minima
 #theme: alembic-jekyll-theme
 
